--- a/KeySnail/KeySnail.csproj
+++ b/KeySnail/KeySnail.csproj
@@ -14,6 +14,7 @@
       <PackageReference Include="NHotkey.Wpf" Version="2.1.0" />
       <PackageReference Include="Prism.Unity" Version="8.1.97" />
       <PackageReference Include="Prism.Wpf" Version="8.1.97" />
+      <PackageReference Include="SemanticVersioning" Version="2.0.2" />
     </ItemGroup>
 
     <ItemGroup>
